fix cropped cr code

--- a/src/public/styling.css
+++ b/src/public/styling.css
@@ -298,8 +298,6 @@ img {
     margin-right: auto;
     margin-bottom: 6rem;
 
-    overflow: hidden;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -317,6 +315,10 @@ img {
 .business-card__image > .qrcode {
         display: none;
     }
+.business-card__image > .qrcode canvas {
+            width: 100%;
+            height: 100%;
+        }
 .business-card__image--qr .avatar {
         display: none;
     }
